[package]
name = "macro_railroad_wasm"
version = "0.1.0"
authors = ["Lukas Lueg <lukas.lueg@gmail.com>"]
build = "build.rs"
edition = "2018"

[dependencies]
wasm-bindgen = "0.2"
railroad = "0.1"
macro_railroad = "0.1"
htmlescape = "0.3"
syn = { version = "1.0", default_features=false }

[lib]
crate-type = ["cdylib"]

[build-dependencies]
built = { version = "0.4", features=["chrono"], default_features=false }

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
