[package]
name = "macro_railroad_wasm"
version = "0.1.0"
authors = ["Lukas Lueg <lukas.lueg@gmail.com>"]
build = "build.rs"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
railroad = "0.3.1"
macro_railroad = "0.1.6"
syn = { version = "2.0", default-features=false }

[lib]
crate-type = ["cdylib"]

[build-dependencies]
built = { version = "0.7", features=["chrono", "dependency-tree"], default-features=false }

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
panic = "abort"
incremental = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
