[package]
name = "macro_railroad_wasm"
version = "0.1.0"
authors = ["Lukas Lueg <lukas.lueg@gmail.com>"]
build = "build.rs"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
macro_railroad = "0.1.7"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
built = { version = "0.7", features=["chrono", "dependency-tree"], default-features=false }

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
panic = "abort"
incremental = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
